fsl-imx-agl-wayland: Mask out old recipes in meta-agl.
Signed-off-by: Ann Thornton <ra43240@freescale.com>

--- a/conf/distro/fsl-imx-agl-wayland.conf
+++ b/conf/distro/fsl-imx-agl-wayland.conf
@@ -59,6 +59,10 @@ PREFERRED_VERSION_fsl-gpu-sdk_mx6 = "2.2"
 
 # Use Wayland new version
 BBMASK = "meta-fsl-arm/recipes-graphics/wayland/weston_%.bbappend"
+BBMASK .= "|meta-agl/recipes-graphics/wayland/weston_1.5.0.bbappend"
+BBMASK .= "|meta-ivi-common/recipes-graphics/wayland/weston_1.5.0.bbappend"
+BBMASK .= "|meta-agl-demo/recipes-qt/qt5/qtbase_5.%.bbappend"
+BBMASK .= "|meta-agl-demo/recipes-qt/qt5/qtwebkit_5.%.bbappend"
 BBMASK .= "|meta-fsl-arm/recipes-graphics/mesa/mesa_%.bbappend"
 
 # Remove the GST patch on the community
