remove duplicated bbappends

--- a/conf/distro/fsl-imx-agl-wayland.conf
+++ b/conf/distro/fsl-imx-agl-wayland.conf
@@ -69,8 +69,7 @@ PREFERRED_VERSION_wayland-native = "1.8.1"
 PREFERRED_VERSION_libinput_mx6 = "0.11.0"
 
 BBMASK .= "|meta-agl-demo/recipes-qt/qt5/qtwayland_%.bbappend"
-BBMASK .= "|meta-agl-demo/recipes-qt/qt5/qtbase_5.%.bbappend"
-BBMASK .= "|meta-agl-demo/recipes-qt/qt5/qtwebkit_5.%.bbappend"
+BBMASK .= "|meta-agl-demo/recipes-connectivity/bluez5/bluez5_%.bbappend"
 
 BBMASK .= "|meta-fsl-arm/recipes-graphics/mesa/mesa_%.bbappend"
 
