conf/layer.conf: Rename to nxp-agl
Signed-off-by: Ann Thornton <ann.thornton@nxp.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -5,7 +5,7 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "fsl-agl"
-BBFILE_PATTERN_fsl-agl := "^${LAYERDIR}"
-BBFILE_PRIORITY_fsl-agl = "8"
+BBFILE_COLLECTIONS += "nxp-agl"
+BBFILE_PATTERN_nxp-agl := "^${LAYERDIR}"
+BBFILE_PRIORITY_nxp-agl = "8"
 
