nxp-imx-agl-wayland.conf: Use bb.utils.contains instead of deprecated base_contains
Signed-off-by: Ann Thornton <ann.thornton@nxp.com>

--- a/conf/distro/nxp-imx-agl-wayland.conf
+++ b/conf/distro/nxp-imx-agl-wayland.conf
@@ -12,7 +12,7 @@ PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
 # Preferred Versions
 
 # preferred versions of recipes-graphics
-FP_TAG = "${@base_contains("TUNE_FEATURES", "callconvention-hard", "-hfp", "-sfp", d)}"
+FP_TAG = "${@bb.utils.contains("TUNE_FEATURES", "callconvention-hard", "-hfp", "-sfp", d)}"
 
 PREFERRED_VERSION_wayland_mx6 = "1.8.1"
 PREFERRED_VERSION_weston_mx6 = "1.8.0"
