nxp-imx-agl-wayland.conf: Updated distro for krogoth
Signed-off-by: Ann Thornton <ann.thornton@nxp.com>

--- a/conf/distro/nxp-imx-agl-wayland.conf
+++ b/conf/distro/nxp-imx-agl-wayland.conf
@@ -12,18 +12,35 @@ PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
 # Preferred Versions
 
 # preferred versions of recipes-graphics
-FP_TAG = "${@bb.utils.contains("TUNE_FEATURES", "callconvention-hard", "-hfp", "-sfp", d)}"
+FP_TAG = "-hfp"
 
-PREFERRED_VERSION_wayland_mx6 = "1.8.1"
-PREFERRED_VERSION_weston_mx6 = "1.8.0"
-PREFERRED_VERSION_wayland-native = "1.8.1"
-PREFERRED_VERSION_libinput_mx6 = "0.11.0"
+PREFERRED_VERSION_wayland_mx6 = "1.9.0"
+PREFERRED_VERSION_weston_mx6 = "1.9.0"
+PREFERRED_VERSION_wayland-native_mx6 = "1.9.0"
 
 # Mask out recipes not needed
 BBMASK .= "|meta-agl-demo/recipes-qt/qt5/qtwayland_%.bbappend"
 
+# We don't have the recipes these append to
+BBMASK .= "|meta-agl/meta-agl-bsp/recipes-bsp/u-boot/u-boot-ti-staging_2015.07.bbappend"
+BBMASK .= "|meta-agl/meta-agl-bsp/recipes-graphics/mesa/mesa_10.%.bbappend"
+BBMASK .= "|meta-agl/meta-agl-bsp/recipes-kernel/linux/linux-yocto_3.14%.bbappend"
+BBMASK .= "|meta-agl/meta-agl-bsp/recipes-kernel/linux/linux-yocto_%.bbappend"
+
+# This is already in Poky
+BBMASK .= "|meta-agl/meta-agl/recipes-graphics/wayland/wayland_1.9.0.bb"
+BBMASK .= "|meta-agl/meta-agl/recipes-graphics/wayland/weston_1.9.0.bb"
+BBMASK .= "|meta-agl/meta-agl/recipes-graphics/wayland/weston_%.bbappend"
+
 # Remove the GST patch on the community
 BBMASK .= "|meta-fsl-arm/recipes-multimedia/gstreamer/gstreamer1.0-plugins-base_%.bbappend"
+
+# Notes on getting wayland-ivi-extension to work:
+# Removing inherit autotools fixes a problem where it tries to make "install"
+BBMASK .= "|meta-agl/meta-ivi-common/recipes-graphics/wayland/wayland-ivi-extension_1.9.1.bb"
+
+# Patches no longer apply from the meta-agl but SRC_URI_remove isn't solving the problem.
+BBMASK .= "|meta-agl/meta-ivi-common/recipes-test/freetype/freetype_%.bbappend"
 
 # From AGL poky-agl distro
 PREFERRED_PROVIDER_udev ?= "systemd"
@@ -39,6 +56,7 @@ AGL_DEFAULT_EXTRA_RRECOMMENDS = "kernel-module-af-packet"
 
 DISTRO_FEATURES_append = "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${AGL_DEFAULT_DISTRO_FEATURES}"
 
+# These are not really redundant since the DISTRO name is different
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
 SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
 
