--- a/conf/distro/nxp-imx-agl-wayland.conf
+++ b/conf/distro/nxp-imx-agl-wayland.conf
@@ -18,6 +18,9 @@ PREFERRED_VERSION_wayland_mx6 = "1.9.0"
 PREFERRED_VERSION_weston_mx6 = "1.9.0"
 PREFERRED_VERSION_wayland-native_mx6 = "1.9.0"
 
+# Replacing this file with our own
+BBMASK .= "|meta-fsl-bsp-release/imx/meta-bsp/recipes-graphics/wayland/weston-init/profile"
+
 # Mask out recipes not needed
 BBMASK .= "|meta-agl-demo/recipes-qt/qt5/qtwayland_%.bbappend"
 
