--- a/conf/distro/nxp-imx-agl-wayland.conf
+++ b/conf/distro/nxp-imx-agl-wayland.conf
@@ -1,4 +1,3 @@
-
 # i.MX DISTRO for AGL Wayland without X11
 
 include conf/distro/fsl-imx-wayland.conf
@@ -9,38 +8,16 @@ DISTRO = "nxp-imx-agl-wayland"
 # Prefer libjpeg-turbo
 PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
 
-# Preferred Versions
-
 # preferred versions of recipes-graphics
 FP_TAG = "-hfp"
 
-PREFERRED_VERSION_wayland_mx6 = "1.9.0"
-PREFERRED_VERSION_weston_mx6 = "1.9.0"
-PREFERRED_VERSION_wayland-native_mx6 = "1.9.0"
-
 # Replacing this file with our own
-BBMASK .= "|meta-fsl-bsp-release/imx/meta-bsp/recipes-graphics/wayland/weston-init/profile"
-
+BBMASK += "/meta-fsl-bsp-release/imx/meta-bsp/recipes-graphics/wayland/weston-init.bbappend"
 # Mask out recipes not needed
-BBMASK .= "|meta-agl-demo/recipes-qt/qt5/qtwayland_%.bbappend"
-
-# We don't have the recipes these append to
-BBMASK .= "|meta-agl/meta-agl-bsp/recipes-bsp/u-boot/u-boot-ti-staging_2015.07.bbappend"
-BBMASK .= "|meta-agl/meta-agl-bsp/recipes-graphics/mesa/mesa_10.%.bbappend"
-BBMASK .= "|meta-agl/meta-agl-bsp/recipes-kernel/linux/linux-yocto_3.14%.bbappend"
-BBMASK .= "|meta-agl/meta-agl-bsp/recipes-kernel/linux/linux-yocto_%.bbappend"
-
+# meta-qt5:pyro no longer provides qtwayland-native as a recipe to append to
+BBMASK += "/meta-agl-demo/recipes-qt/qt5/qtwayland-native_%.bbappend"
 # This is already in Poky
-BBMASK .= "|meta-agl/meta-agl/recipes-graphics/wayland/wayland_1.9.0.bb"
-BBMASK .= "|meta-agl/meta-agl/recipes-graphics/wayland/weston_1.9.0.bb"
-BBMASK .= "|meta-agl/meta-agl/recipes-graphics/wayland/weston_%.bbappend"
-
-# Remove the GST patch on the community
-BBMASK .= "|meta-fsl-arm/recipes-multimedia/gstreamer/gstreamer1.0-plugins-base_%.bbappend"
-
-# Notes on getting wayland-ivi-extension to work:
-# Removing inherit autotools fixes a problem where it tries to make "install"
-BBMASK .= "|meta-agl/meta-ivi-common/recipes-graphics/wayland/wayland-ivi-extension_1.9.1.bb"
+BBMASK += "/meta-agl/meta-agl/recipes-graphics/wayland/weston_%.bbappend"
 
 # From AGL poky-agl distro
 PREFERRED_PROVIDER_udev ?= "systemd"
