nxp-imx-agl-wayland: masks and versions for mx8
Prefer morty versions over our upgrades from other layers.

Signed-off-by: Mihai Lindner <mihai.lindner@nxp.com>

--- a/conf/distro/nxp-imx-agl-wayland.conf
+++ b/conf/distro/nxp-imx-agl-wayland.conf
@@ -4,11 +4,16 @@ include conf/distro/fsl-imx-wayland.conf
 
 DISTRO = "nxp-imx-agl-wayland"
 
-# Preferred Providers
-# Prefer libjpeg-turbo
-PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
+PREFERRED_PROVIDER_jpeg ?= "libjpeg-turbo"
 
-# preferred versions of recipes-graphics
+PREFERRED_VERSION_weston ?= "1.11.0"
+
+PREFERRED_VERSION_gstreamer1.0 ?= "1.8.3"
+PREFERRED_VERSION_gstreamer1.0-plugins-bad ?= "1.8.3"
+PREFERRED_VERSION_gstreamer1.0-plugins-base ?= "1.8.3"
+PREFERRED_VERSION_gstreamer1.0-plugins-good ?= "1.8.3"
+PREFERRED_VERSION_gstreamer1.0-plugins-ugly ?= "1.8.3"
+
 FP_TAG = "-hfp"
 
 # Replacing this file with our own
@@ -18,6 +23,8 @@ BBMASK += "/meta-fsl-bsp-release/imx/meta-bsp/recipes-graphics/wayland/weston-in
 BBMASK += "/meta-agl-demo/recipes-qt/qt5/qtwayland-native_%.bbappend"
 # This is already in Poky
 BBMASK += "/meta-agl/meta-agl/recipes-graphics/wayland/weston_%.bbappend"
+# This pulls in some patches that break imx8 builds
+BBMASK += "/meta-freescale/recipes-multimedia/gstreamer/gstreamer1.0-plugins-bad_1.8.%.bbappend"
 
 # From AGL poky-agl distro
 PREFERRED_PROVIDER_udev ?= "systemd"
