Layer and distro updates for rocko
Update layer configuration to match rocko release.
Remove old distro definition and start with one based on poky-agl with
our environment on top of it.

Signed-off-by: Mihai Lindner <mihai.lindner@nxp.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,11 +1,11 @@
-# Add conf and classes directory to BBPATH
+# We have a conf and classes directory, add to BBPATH
 BBPATH .= ":${LAYERDIR}"
 
-# We have a packages directory, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
-            ${LAYERDIR}/recipes-*/*/*.bbappend"
+# We have recipes-* directories, add to BBFILES
+BBFILES += "${LAYERDIR}/recipes-*/*/*.bb ${LAYERDIR}/recipes-*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "nxp-agl"
 BBFILE_PATTERN_nxp-agl := "^${LAYERDIR}"
 BBFILE_PRIORITY_nxp-agl = "8"
 
+LAYERSERIES_COMPAT_nxp-agl = "rocko"
