--- a/conf/distro/imx-agl-wayland.conf
+++ b/conf/distro/imx-agl-wayland.conf
@@ -1,5 +1,6 @@
 # i.MX DISTRO for AGL Wayland without X11
 require conf/distro/poky-agl.conf
+require conf/include/agl-appfw-smack.inc
 require conf/distro/fsl-imx-wayland.conf
 
 DISTRO = "imx-agl-wayland"
