imx-agl-wayland.conf: Use systemd as net manager
Override set to 'systemd', instead of 'connman' as defined in poky-agl.

Signed-off-by: Mihai Lindner <mihai.lindner@nxp.com>

--- a/conf/distro/imx-agl-wayland.conf
+++ b/conf/distro/imx-agl-wayland.conf
@@ -4,3 +4,6 @@ require conf/include/agl-appfw-smack.inc
 require conf/distro/fsl-imx-wayland.conf
 
 DISTRO = "imx-agl-wayland"
+
+# Use systemd instead of connman.
+VIRTUAL-RUNTIME_net_manager = "systemd"
