imx-agl-wayland: Disable security flags for optee-client
Optimize options not handled properly.
[YOCIMX-2594]

Signed-off-by: Mihai Lindner <mihai.lindner@nxp.com>

--- a/conf/distro/imx-agl-wayland.conf
+++ b/conf/distro/imx-agl-wayland.conf
@@ -7,3 +7,5 @@ DISTRO = "imx-agl-wayland"
 
 # Use systemd instead of connman.
 VIRTUAL-RUNTIME_net_manager = "systemd"
+
+SECURITY_CFLAGS_pn-optee-client-imx = ""
