imx-agl-wayland.conf: prefer libhomescreen 2017
Signed-off-by: Mihai Lindner <mihai.lindner@nxp.com>

--- a/conf/distro/imx-agl-wayland.conf
+++ b/conf/distro/imx-agl-wayland.conf
@@ -9,3 +9,6 @@ DISTRO = "imx-agl-wayland"
 VIRTUAL-RUNTIME_net_manager = "systemd"
 
 SECURITY_CFLAGS_pn-optee-client-imx = ""
+
+# Prefer the fixed version
+PREFERRED_PROVIDER_virtual/libhomescreen = "libhomescreen-2017"
