imx-agl-wayland: Disable security flags for weston
Should be fixed upstream. Disable for now.
[MGS-3838]

Signed-off-by: Mihai Lindner <mihai.lindner@nxp.com>

--- a/conf/distro/imx-agl-wayland.conf
+++ b/conf/distro/imx-agl-wayland.conf
@@ -9,6 +9,7 @@ DISTRO = "imx-agl-wayland"
 VIRTUAL-RUNTIME_net_manager = "systemd"
 
 SECURITY_CFLAGS_pn-optee-client-imx = ""
+SECURITY_CFLAGS_pn-weston = ""
 
 # Prefer the fixed version
 PREFERRED_PROVIDER_virtual/libhomescreen = "libhomescreen-2017"
