imx-agl-wayland: Set wayland-ivi-extension to git
Override poky-agl preference.
We need this to use wayland-ivi-extension from our layer.

Signed-off-by: Mihai Lindner <mihai.lindner@nxp.com>

--- a/conf/distro/imx-agl-wayland.conf
+++ b/conf/distro/imx-agl-wayland.conf
@@ -13,3 +13,4 @@ SECURITY_CFLAGS_pn-weston = ""
 
 # Prefer the fixed version
 PREFERRED_PROVIDER_virtual/libhomescreen = "libhomescreen-2017"
+PREFERRED_VERSION_wayland-ivi-extension = "2.2.0+git%"
