layer.conf: Update layer compatibility to thud branch
Signed-off-by: Alexandra Safta <alexandra-ioana.safta@nxp.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,4 +8,4 @@ BBFILE_COLLECTIONS += "nxp-agl"
 BBFILE_PATTERN_nxp-agl := "^${LAYERDIR}"
 BBFILE_PRIORITY_nxp-agl = "8"
 
-LAYERSERIES_COMPAT_nxp-agl = "rocko"
+LAYERSERIES_COMPAT_nxp-agl = "thud"
