--- a/conf/distro/imx-agl-wayland.conf
+++ b/conf/distro/imx-agl-wayland.conf
@@ -9,8 +9,6 @@ DISTRO = "imx-agl-wayland"
 VIRTUAL-RUNTIME_net_manager = "systemd"
 
 SECURITY_CFLAGS_pn-optee-client-imx = ""
-SECURITY_CFLAGS_pn-weston = ""
 
-# Prefer the fixed version
-PREFERRED_PROVIDER_virtual/libhomescreen = "libhomescreen-2017"
-PREFERRED_VERSION_wayland-ivi-extension = "2.2.0+git%"
+PREFERRED_VERSION_wayland-protocols = "1.17.imx"
+PREFERRED_VERSION_weston = "6.0.0.imx"
