layer.conf: BBMASK opencv bbappend as it overwrites PACAKGECONFIG
The PACKAGECONFIG content from the bbappend is already included in
a much larger list of configs within the opencv recipe.

Signed-off-by: Alexandru Palalau <ioan-alexandru.palalau@nxp.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,4 +8,6 @@ BBFILE_COLLECTIONS += "nxp-agl"
 BBFILE_PATTERN_nxp-agl := "^${LAYERDIR}"
 BBFILE_PRIORITY_nxp-agl = "8"
 
+BBMASK += "/meta-agl/meta-agl-profile-core/recipes-support/opencv/opencv_4.%.bbappend"
+
 LAYERSERIES_COMPAT_nxp-agl = "zeus"
