--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,5 +9,7 @@ BBFILE_PATTERN_nxp-agl := "^${LAYERDIR}"
 BBFILE_PRIORITY_nxp-agl = "8"
 
 BBMASK += "/meta-agl/meta-agl-profile-core/recipes-support/opencv/opencv_4.%.bbappend"
+BBMASK += "/meta-agl-demo/recipes-graphics/ttf-fonts/ttf-noto-emoji_20190815.bb"
+TTF_FONTS_remove = "ttf-noto-emoji-color"
 
 LAYERSERIES_COMPAT_nxp-agl = "zeus"
