Prepare layer for kirkstone
Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,6 +10,6 @@ BBFILE_PRIORITY_nxp-agl = "8"
 
 BBMASK += "/meta-agl/meta-agl-profile-core/recipes-support/opencv/opencv_4.%.bbappend"
 BBMASK += "/meta-agl-demo/recipes-graphics/ttf-fonts/ttf-noto-emoji_20190815.bb"
-TTF_FONTS_remove = "ttf-noto-emoji-color"
+TTF_FONTS:remove = "ttf-noto-emoji-color"
 
-LAYERSERIES_COMPAT_nxp-agl = "zeus"
+LAYERSERIES_COMPAT_nxp-agl = "kirkstone"
